# ForkRoom

./: .gitignore  LICENSE  README.md  pyproject.toml
.vibe-board/: worktree-map.json
scripts/: init_experiment.py  record_session.py
skills/: forkroom-init.md  forkroom-merge.md  forkroom-record.md  forkroom-run.md  vibe-board-init.md  vibe-board-merge.md  vibe-board-record.md  vibe-board-run.md
skills/forkroom/: SKILL.md
skills/forkroom-run/templates/: node.md  python.md  shell.md
skills/forkroom/references/: init.md  merge.md  record.md  run-template-node.md  run-template-python.md  run.md
skills/vibe-board/: SKILL.md
skills/vibe-board-run/templates/: node.md  python.md  shell.md
skills/vibe-board/agents/: openai.yaml
src/forkroom/: __init__.py  api.py  app.py  cli.py  codex_focus.py  codex_status.py  init_experiment.py  install.py  models.py  record_session.py  runs.py  scanner.py
src/vibe_board/: __init__.py  app.py  cli.py  codex_focus.py  codex_status.py  init_experiment.py  models.py  record_session.py  runs.py  scanner.py  time_format.py
tests/: helpers.py  test_app_runs.py  test_app_sessions.py  test_cli.py  test_codex_focus.py  test_codex_status.py  test_init_experiment.py  test_install.py  test_readme.py  test_record_session.py  test_run_templates.py  test_runs.py  test_scanner_sessions.py  test_time_format.py
