[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-board"
version = "0.1.0"
description = "Read-only TUI for worktree-backed coding experiments."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.80",
]

[project.scripts]
vibe-board = "vibe_board.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
